--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
 <!DOCTYPE HTML>
-<!--
-	Liuhouzhi's Blog -试验品
-       我也不知道我在干什么          crepper？   aw man～
+<!--     莫生气
+人生就像一场戏，今世有缘才相聚。
+相处一处不容易，人人应该去珍惜。
+世上万物般般有，哪能件件如我意。
+为了小事发脾气，回想起来又何必。
+他人气我我不气，气出病来无人替。
+生气伤肝又伤脾，促人衰老又生疾。
+看病花钱又受罪，还说气病治非易。
+小人量小不让人，常常气人气自己。
+君子量大同天地，好事坏事包在里。
+他人骂我我装聋，高声上天低入地。
+我若错了真该骂，诚心改正受教育。
+要是根本没那事，全当他是骂自己。
+左亲右邻团结好，家庭和睦乐无比。
+夫妻互助又亲爱，朝夕相伴笑嘻嘻。
+政通人和想天伦，晚年幸福甜如蜜。
+邻里亲友不要比，儿孙琐事随他去。
+淡泊名利促健康，文明礼貌争第一。
+清朝有个闫敬铭，领悟危害不生气。
+弥勒就是布袋僧，袒胸大肚能忍气。
+笑口常开无忧虑，一切疾病皆消去。
+不气不气真不气，不气歌儿记心里。
+只要你能做得到，活到百岁不足奇。
+
 	
         
 -->
@@ -37,7 +58,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Liuhouzhi's Blog</h1> <!--主页的第一句话--> 
-							<p>这是一个博客...</p>
+							<p>这是用来测试的网站...（我也不知道这是用了来干嘛的）</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -187,8 +208,8 @@
 					</section>
 
 			</div>
-		<!-- five -->
-					<section id="five" class="wrapper style2 spotlights">
+		<!-- four -->
+					<section id="four" class="wrapper style2 spotlights">
 						<section>
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
