--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 -->
 <html>
 	<head>
-		<title>Liuhouzhi's Blog</title>
+		<title>Liuhouzhi's Blog（测试用）</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
