--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Who we are</a></li>
 							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
 							<li><a href="#four">About</a></li>
+							<li><a href="#three">Get in touch</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -58,7 +58,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Liuhouzhi's Blog</h1> <!--主页的第一句话--> 
-							<p>这是用来测试的网站...（我也不知道这是用了来干嘛的）</p>
+							<p>这是用来测试的网站...（其实我也不知道这是用了来干嘛的）</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
