--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="https://liuhouzhi0809.github.io/">home page</a></li>
 					</ul>
 				</div>
 			</footer>
