--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<h1>Liuhouzhi's Blog</h1> <!--主页的第一句话--> 
 							<p>这是用来测试的网站...（其实我也不知道这是用了来干嘛的）</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#one" class="button scrolly">了解更多</a></li>
 							</ul>
 						</div>
 					</section>
@@ -74,7 +74,7 @@
 									<h2>Sed ipsum dolor</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="generic.html" class="button">了解更多</a></li>
 									</ul>
 								</div>
 							</div>
@@ -86,7 +86,7 @@
 									<h2>Feugiat consequat</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="generic.html" class="button">了解更多</a></li>
 									</ul>
 								</div>
 							</div>
@@ -98,7 +98,7 @@
 									<h2>Ultricies aliquam</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="generic.html" class="button">了解更多</a></li>
 									</ul>
 								</div>
 							</div>
@@ -179,13 +179,13 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
+											<span>12345 nowhere #654<br />
 											Nashville, TN 00000-0000<br />
 											USA</span>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="#">12093847564@qq.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
