--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 笑口常开无忧虑，一切疾病皆消去。
 不气不气真不气，不气歌儿记心里。
 只要你能做得到，活到百岁不足奇。
-
 	
         
 -->
@@ -41,11 +40,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#four">About</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#intro">欢迎</a></li>
+							<li><a href="#one">我们做了什么</a></li>
+							<li><a href="#three">关于</a></li>
+							<li><a href="#two">取得联系</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -60,53 +58,14 @@
 							<h1>Liuhouzhi's Blog</h1> <!--主页的第一句话--> 
 							<p>这是用来测试的网站...（其实我也不知道这是用了来干嘛的）</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">了解更多</a></li>
+								<li><a href="#one" class="button scrolly">了解更多e</a></li>
 							</ul>
 						</div>
 					</section>
 
-				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
-						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">了解更多</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">了解更多</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">了解更多</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-					</section>
 
-				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
+				<!-- one -->
+					<section id="one" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
 							<p>很多很多的事情...</p>
@@ -148,8 +107,8 @@
 						</div>
 					</section>
 
-				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
+				<!-- two -->
+					<section id="two" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
@@ -179,13 +138,13 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>12345 nowhere #654<br />
+											<span>12345 Somewhere Road #654<br />
 											Nashville, TN 00000-0000<br />
 											USA</span>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">12093847564@qq.com</a>
+											<a href="#">user@untitled.tld</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
@@ -208,8 +167,8 @@
 					</section>
 
 			</div>
-		<!-- four -->
-					<section id="four" class="wrapper style2 spotlights">
+		<!-- three -->
+					<section id="three" class="wrapper style2 spotlights">
 						<section>
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
@@ -217,7 +176,7 @@
 									<h2>Sed ipsum dolor</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="generic.html" class="button">了解更多</a></li>
 									</ul>
 								</div>
 							</div>
@@ -241,7 +200,7 @@
 									<h2>Ultricies aliquam</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="generic.html" class="button">了解更多</a></li>
 									</ul>
 								</div>
 							</div>
