--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Liuhouzhi's Blog</h1> <!--主页的第一句话--> 
-							<p>这是用来测试的网站...（其实我也不知道这是用了来干嘛的）</p>
+							<p>这是用来测试的网站...（其实我也不知道这是用来干嘛的）</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">了解更多e</a></li>
 							</ul>
@@ -102,7 +102,7 @@
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
+								<li><a href="generic.html" class="button">了解更多</a></li>
 							</ul>
 						</div>
 					</section>
@@ -173,10 +173,10 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>TEST1</h2>
+									<p>测试跳转功能...</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">了解更多</a></li>
+										<li><a href="test1.html" class="button">了解更多</a></li>
 									</ul>
 								</div>
 							</div>
