--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<h1>Liuhouzhi's Blog</h1> <!--主页的第一句话--> 
 							<p>这是用来测试的网站...（其实我也不知道这是用来干嘛的）</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">了解更多e</a></li>
+								<li><a href="#one" class="button scrolly">了解更多</a></li>
 							</ul>
 						</div>
 					</section>
@@ -176,7 +176,7 @@
 									<h2>TEST1</h2>
 									<p>测试跳转功能...</p>
 									<ul class="actions">
-										<li><a href="test1.html" class="button">了解更多</a></li>
+										<li><a href="test1.htm" class="button">了解更多</a></li>
 									</ul>
 								</div>
 							</div>
