--- a/test1.htm
+++ b/test1.htm
@@ -6,7 +6,7 @@
     <meta name="google-site-verification" content="xBT4GhYoi5qRD5tr338pgPM5OWHHIDR6mNg1a3euekI">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="description" content="Every failure is leading towards success.">
-    <meta name="keywords" content="刘厚知的博客,liuhouzhi, Liuhouzhi‘s Blog, Java">
+    <meta name="keywords" content="lhz的博客,liuhouzhi, Liuhouzhi‘s Blog, Java">
     <meta name="theme-color" content="#000000">
     
     <!-- Open Graph -->
