--- a/test1.htm
+++ b/test1.htm
@@ -274,7 +274,7 @@
   
   
   <li>
-    <a target="_blank" href="https://www.zhihu.com/people/zongguanxian">
+    <a target="_blank" href="https://www.zhihu.com/404/">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa  fa-stack-1x fa-inverse">知</i>
@@ -284,7 +284,7 @@
   
   
   <li>
-    <a target="_blank" href="http://weibo.com/wzb1994">
+    <a target="_blank" href="http://weibo.com/404">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
@@ -295,7 +295,7 @@
   
   
   <li>
-    <a target="_blank" href="https://github.com/flyingwzb">
+    <a target="_blank" href="https://github.com/liuhouzhi">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-github fa-stack-1x fa-inverse"></i>
