--- a/test1.htm
+++ b/test1.htm
@@ -309,7 +309,7 @@
                 <p class="copyright text-muted">
                     Copyright © Liuhouzhi's Blog 2020
                     <br>
-                    Powered by <a href="https://flyingwzb.github.io/">Will Wang Blog</a> |
+                    Powered by <a href="https://liuhouzhi0809.github.io/">liuhouzhi0809 Blog</a> |
                     <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px" height="20px" src="./Liuhouzhi的博客_files/github-btn.html">
                     </iframe>
                     <br>
