--- a/test1.htm
+++ b/test1.htm
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Liuhouzhi的博客">
     
     <meta property="og:type" content="website">
-    <meta property="og:description" content="自律/坚持/耐心">
+    <meta property="og:description" content="/坚持/">
     
     <meta property="og:image" content="https://liuhouzhi0809.github.io/404///img/will-wang.jpg">
     <meta property="og:url" content="https://liuhouzhi0809.github.io/404///">
@@ -309,7 +309,7 @@
                 <p class="copyright text-muted">
                     Copyright © Liuhouzhi's Blog 2020
                     <br>
-                    Powered by <a href="https://liuhouzhi0809.github.io/">liuhouzhi0809 Blog</a> |
+                    Powered by <a href="https://liuhouzhi0809.github.io/">liuhouzhi Blog</a> |
                     <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px" height="20px" src="./Liuhouzhi的博客_files/github-btn.html">
                     </iframe>
                     <br>
