--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>TEST1</h2>
+									<h2>测试1</h2>
 									<p>测试跳转功能...</p>
 									<ul class="actions">
 										<li><a href="test1.htm" class="button">了解更多</a></li>
@@ -185,10 +185,10 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>测试2</h2>
+									<p>跳转外链下载（下载一个zip文件）</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://github.com/liuhouzhi0809/liuhouzhi0809.github.io/raw/master/test1/%E4%B8%A4%E6%95%B0%E4%BA%A4%E6%8D%A2.zip" class="button">下载</a></li>
 									</ul>
 								</div>
 							</div>
