--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 				<!-- two -->
 					<section id="two" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>取得联系</h2>
+							<p>未开通，正在施工... </p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
