--- a/test1.htm
+++ b/test1.htm
@@ -70,7 +70,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="https://acfun.cn/">Liuhouzhi's Blog</a>
+            <a class="navbar-brand" href="https://github.com/">Liuhouzhi's Blog</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
