--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>测试3</h2>
+									<p>警告！不要点开（会导致死循环）.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">了解更多</a></li>
+										<li><a href="don‘t click。html" class="button">测试</a></li>
 									</ul>
 								</div>
 							</div>
