--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 									<h2>测试3</h2>
 									<p>警告！不要点开（会导致死循环）.</p>
 									<ul class="actions">
-										<li><a href="don‘t click。html" class="button">测试</a></li>
+										<li><a href="don‘t click.html" class="button">测试</a></li>
 									</ul>
 								</div>
 							</div>
