--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
 							<div class="content">
 								<div class="inner">
 									<h2>测试3</h2>
-									<p>警告！不要点开（会导致死循环）.</p>
+									<p>测试.</p>
 									<ul class="actions">
-										<li><a href="click.html" class="button">测试</a></li>
+										<li><a href="shopgoods_order.html" class="button">测试</a></li>
 									</ul>
 								</div>
 							</div>
