--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<!--     莫生气
+<!--     莫生气                                                  <！-感谢html5.net给我提供的模版！！
 人生就像一场戏，今世有缘才相聚。
 相处一处不容易，人人应该去珍惜。
 世上万物般般有，哪能件件如我意。
@@ -42,8 +42,9 @@
 						<ul>
 							<li><a href="#intro">欢迎</a></li>
 							<li><a href="#one">我们做了什么</a></li>
-							<li><a href="#three">关于</a></li>
 							<li><a href="#two">取得联系</a></li>
+							<li><a href="#three">测试</a></li>
+							<!--<li><a href="#four">其他</a></li> 
 						</ul>
 					</nav>
 				</div>
