--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<!--     莫生气                                                  <！-感谢html5.net给我提供的模版！！
+<!--     莫生气                                                  
 人生就像一场戏，今世有缘才相聚。
 相处一处不容易，人人应该去珍惜。
 世上万物般般有，哪能件件如我意。
