--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
 							<div class="content">
 								<div class="inner">
 									<h2>测试3</h2>
-									<p>测试.</p>
+									<p>测试留言功能.</p>
 									<ul class="actions">
-										<li><a href="shopgoods_order.html" class="button">测试</a></li>
+										<li><a href="message.html" class="button">测试</a></li>
 									</ul>
 								</div>
 							</div>
