--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>测试3</h2>
-									<p>测试留言功能.</p>
+									<p>测试留言功能（虽然有点丑，但是能用）.</p>
 									<ul class="actions">
 										<li><a href="message.html" class="button">测试</a></li>
 									</ul>
