--- a/generic.html
+++ b/generic.html
@@ -2,8 +2,8 @@
 <!--    2020.4.21                                                                         	
 -->
 <html>
-	<head>
-		<title>Generic  </title>
+	<head>    
+		<title>Generic  </title> <!-- 浏览器标题 -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -13,12 +13,13 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
+				<a href="index.html" class="title">Hyperspace</a>   <!--总标题 -->
 				<nav>
 					<ul>
-						<li><a href="index.html">主页</a></li>
+						<li><a href="index.html">主页</a></li>         
 						<li><a href="generic.html" class="active">Generic</a></li>
 						<li><a href="elements.html">要素</a></li>
+						<li><a href="diary.html">日记</a></li>
 					</ul>
 				</nav>
 			</header>
