--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
 									<p>测试跳转功能...</p>
 									<ul class="actions">
 										<li><a href="test1.htm" class="button">了解更多</a></li>
+										<li><a href="diary.html" class="button">日记</a></li>
 									</ul>
 								</div>
 							</div>
