--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<li><a href="#intro">欢迎</a></li>
 							<li><a href="#one">我们做了什么</a></li>
 							<li><a href="#two">取得联系</a></li>
-							<li><a href="#three">测试</a></li>
+							<li><a href="#three">内容</a></li>
 							<!-- <li><a href="#four">测试</a></li>  -->
 							<!-- <li><a href="#four">测试</a></li>  -->
 							<!-- <li><a href="#four">测试</a></li>  -->
@@ -177,10 +177,10 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>测试1</h2>
-									<p>测试跳转功能...</p>
+									<h2>文章</h2>
+									<p>各种内容</p>
 									<ul class="actions">
-										<li><a href="test1.htm" class="button">了解更多</a></li>
+										<li><a href="test1.htm" class="button">测试1</a></li>
 										<li><a href="diary.html" class="button">日记</a></li>
 									</ul>
 								</div>
