--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<!--     莫生气                                                  
+<!--     莫生气                                （这是一个正在测试的网站）                                                 
 人生就像一场戏，今世有缘才相聚。
 相处一处不容易，人人应该去珍惜。
 世上万物般般有，哪能件件如我意。
@@ -41,9 +41,8 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">欢迎</a></li>
-							<li><a href="#one">我们做了什么</a></li>
+							<li><a href="#one">内容</a></li>
 							<li><a href="#two">取得联系</a></li>
-							<li><a href="#three">内容</a></li>
 							<!-- <li><a href="#four">测试</a></li>  -->
 							<!-- <li><a href="#four">测试</a></li>  -->
 							<!-- <li><a href="#four">测试</a></li>  -->
@@ -68,51 +67,50 @@
 					</section>
 
 
-				<!-- one -->
-					<section id="one" class="wrapper style3 fade-up">
-						<div class="inner">
-							<h2>What we do</h2>
-							<p>很多很多的事情...</p>
-							<div class="features">
-								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>无...</h3>
-									<p>无...</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3>无...</h3>
-									<p>无...</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>无...</h3>
-									<p>无...</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>无...</h3>
-									<p>无...</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>无...</h3>
-									<p>无...</p>
-								</section>
-								<section>
-									<span class="icon major fa-gem"></span>
-									<h3>无...</h3>
-									<p>无...</p>
-								</section>
+				
+					
+		<!-- one -->
+					<section id="one" class="wrapper style2 spotlights">
+						<section>
+							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>文章</h2>
+									<p>各种内容</p>
+									<ul class="actions">
+										<li><a href="test1.htm" class="button">测试1</a></li>
+										<li><a href="diary.html" class="button">日记</a></li>
+									</ul>
+								</div>
 							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">了解更多</a></li>
-							</ul>
-						</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>下载去</h2>
+									<p>有很多资源可以下载</p>
+									<ul class="actions">
+										<li><a href="https://github.com/liuhouzhi0809/liuhouzhi0809.github.io/raw/master/test1/%E4%B8%A4%E6%95%B0%E4%BA%A4%E6%8D%A2.zip" class="button">下载</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>留言区</h2>
+									<p>测试留言功能（虽然有点丑，但是能用）.</p>
+									<ul class="actions">
+										<li><a href="message.html" class="button">测试</a></li>
+									</ul>
+								</div>
+							</div>
+			                    </section>
+		<!-- two -->		
 					</section>
-
-				<!-- two -->
-					<section id="two" class="wrapper style1 fade-up">
+				<section id="two" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>取得联系</h2>
 							<p>未开通，正在施工... </p>
@@ -171,46 +169,6 @@
 					</section>
 
 			</div>
-		<!-- three -->
-					<section id="three" class="wrapper style2 spotlights">
-						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>文章</h2>
-									<p>各种内容</p>
-									<ul class="actions">
-										<li><a href="test1.htm" class="button">测试1</a></li>
-										<li><a href="diary.html" class="button">日记</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>测试2</h2>
-									<p>跳转外链下载（下载一个zip文件）</p>
-									<ul class="actions">
-										<li><a href="https://github.com/liuhouzhi0809/liuhouzhi0809.github.io/raw/master/test1/%E4%B8%A4%E6%95%B0%E4%BA%A4%E6%8D%A2.zip" class="button">下载</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>测试3</h2>
-									<p>测试留言功能（虽然有点丑，但是能用）.</p>
-									<ul class="actions">
-										<li><a href="message.html" class="button">测试</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-					</section>
 
 
 		<!-- Footer -->
