--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 									<h2>文章</h2>
 									<p>各种内容</p>
 									<ul class="actions">
-										<li><a href="test1.htm" class="button">测试1</a></li>
-										<li><a href="diary.html" class="button">日记</a></li>
+										<li><a href="Article-area.htm" class="button">前往</a></li>
+										
 									</ul>
 								</div>
 							</div>
@@ -88,10 +88,10 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>下载去</h2>
+									<h2>资源区</h2>
 									<p>有很多资源可以下载</p>
 									<ul class="actions">
-										<li><a href="https://github.com/liuhouzhi0809/liuhouzhi0809.github.io/raw/master/test1/%E4%B8%A4%E6%95%B0%E4%BA%A4%E6%8D%A2.zip" class="button">下载</a></li>
+										<li><a href="Resource-area.html" class="button">前往</a></li>
 									</ul>
 								</div>
 							</div>
