--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>文章</h2>
+									<h2>文章区</h2>
 									<p>各种内容</p>
 									<ul class="actions">
-										<li><a href="Article-area.htm" class="button">前往</a></li>
+										<li><a href="Article-area.html" class="button">前往</a></li>
 										
 									</ul>
 								</div>
