--- a/Article-area.html
+++ b/Article-area.html
@@ -32,7 +32,8 @@
 						<div class="inner">
 							<h1 class="major">A Generic Page</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-						<!--	<p>.</p>
+	                                                <li><a href="diary.html" class="button">日记</a></li>					
+						<!--   	<p>.</p>
 							<p>.</p>       -->
 						</div>
 					</section>
