--- a/Article-area.html
+++ b/Article-area.html
@@ -17,9 +17,9 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">主页</a></li>         
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">要素</a></li>
-						<li><a href="diary.html">日记</a></li>
+						<li><a href="Article-areac.html" class="文章区">Generic</a></li>
+						<li><a href="Recourse-area.html">资源区</a></li>
+					
 					</ul>
 				</nav>
 			</header>
@@ -30,7 +30,7 @@
 				<!-- Main。-->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
+							<h1 class="major">文章区</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 	                                                <li><a href="diary.html" class="button">日记</a></li>					
 						<!--   	<p>.</p>
