--- a/Article-area.html
+++ b/Article-area.html
@@ -13,7 +13,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">文章区</a>   <!--总标题 -->
+				<a href="index.html" class="title">Liuhouzhi's Blog</a>   <!--总标题 -->
 				<nav>
 					<ul>
 						<li><a href="index.html">主页</a></li>         
