--- a/diary.html
+++ b/diary.html
@@ -13,13 +13,12 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">日记</a>   <!--总标题 -->
+				<a href="index.html" class="title">Liuhouzhi's Blog</a>   <!--总标题 -->
 				<nav>
 					<ul>
 						<li><a href="index.html">主页</a></li>         
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">要素</a></li>
 						<li><a href="diary.html">日记</a></li>
+						<li><a href="resource-area.html">资源区</a></li>
 					</ul>
 				</nav>
 			</header>
