--- a/diary.html
+++ b/diary.html
@@ -29,7 +29,7 @@
 				<!-- Main。-->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
+							<h1 class="major">我的日记</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 						<!--	<p>.</p>
 							<p>.</p>       -->
