--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 				<section id="two" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>取得联系</h2>
-							<p>未开通，正在施工... </p>
+							<p>未开通，正在施工（请使用上面的留言功能)</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
