--- a/diary.html
+++ b/diary.html
@@ -30,9 +30,10 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">我的日记</h1>
-							
-						<!--	<p>.</p>
-							<p>.</p>       -->
+							                               <!-- 日记的文字-->
+							<p>2020年4月21日 </p>                   
+							<p>今天天气甚好，无事。</p> 
+							<p>2020年4月21日</p>  
 						</div>
 					</section>
 
