--- a/diary.html
+++ b/diary.html
@@ -33,7 +33,8 @@
 							                               <!-- 日记的文字-->
 							<p>2020年4月21日 </p>                   
 							<p>今天天气甚好，无事。</p> 
-							<p>2020年4月21日</p>  
+							<p>2020年4月22日</p> 
+							<p>今天天气：阴，花了一些时间删除，改动了一些网站上页面。无事，一切安好。</p>
 						</div>
 					</section>
 
