--- a/About.html
+++ b/About.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<!--    2020.4.21 建立此网页                                                                                         	
+<!--    2020.4.23 建立此网页                                                                                         	
 -->
 <html>
 	<head>    
@@ -18,8 +18,8 @@
 					<ul>
 						<li><a href="index.html">主页</a></li>         
 						<li><a href="diary.html">日记</a></li>
-						<li><a href="resource-area.html">资源区</a></li>
-            	<li><a href="resource-area.html">关于</a></li>
+						<li><a href="Rsource-area.html">资源区</a></li>
+            	                                <li><a href="About.html">关于</a></li>
 					</ul>
 				</nav>
 			</header>
