--- a/diary.html
+++ b/diary.html
@@ -18,7 +18,7 @@
 					<ul>
 						<li><a href="index.html">主页</a></li>         
 						<li><a href="diary.html">日记</a></li>
-						<li><a href="resource-area.html">资源区</a></li>
+						<li><a href="Resource-area.html">资源区</a></li>
 					</ul>
 				</nav>
 			</header>
