--- a/Resource-area.html
+++ b/Resource-area.html
@@ -18,7 +18,7 @@
 					<ul>
 						<li><a href="index.html">主页</a></li>                            <!-- 此处添加顶部栏 -->
 						<li><a href="Article-area.html" class="active">文章区</a></li>
-						<li><a href="resource-area.html">资源区</a></li>
+						<li><a href="Resource-area.html">资源区</a></li>
 					
 					</ul>
 				</nav>
