--- a/index.html
+++ b/index.html
@@ -188,6 +188,11 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+		
+		
+		<link rel="icon" href="./images/favicon.ico" type="favicon.icox-icon" />
+       <link rel="shortcut icon" href="./images/favicon.ico" type="favicon.ico"/>
+
 
 	</body>
 </html>
