--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 -->
 <html>
 	<head>
+		<link rel="shortcut icon" href="favicon.ico" >
+		
 		<title>Liuhouzhi's Blog（测试用）</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
