--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 -->
 <html>
 	<head>
-		<link rel="shortcut icon" href="favicon.ico" >
+		<link rel="shortcut icon" href="favicon.ico.png" >
 		
 		<title>Liuhouzhi's Blog（测试用）</title>
 		<meta charset="utf-8" />
