--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 -->
 <html>
 	<head>
+		<!--icon -->
 		<link rel="shortcut icon" href="favicon.ico.png" >
 		
 		<title>Liuhouzhi's Blog（测试用）</title>
