--- a/About.html
+++ b/About.html
@@ -3,6 +3,9 @@
 -->
 <html>
 	<head>    
+		<!--icon -->
+		<link rel="shortcut icon" href="favicon.ico.png" >
+		
 		<title>日记-liuhouzhi‘s blog  </title> <!-- 浏览器标题 -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
