--- a/diary.html
+++ b/diary.html
@@ -20,8 +20,10 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">主页</a></li>         
-						<li><a href="diary.html">日记</a></li>
+						<li><a href="Article-area">日记</a></li>
 						<li><a href="Resource-area.html">资源区</a></li>
+						 <li><a href="About.html">关于</a></li>
+						
 					</ul>
 				</nav>
 			</header>
