--- a/Resource-area.html
+++ b/Resource-area.html
@@ -22,6 +22,7 @@
 						<li><a href="index.html">主页</a></li>                            <!-- 此处添加顶部栏 -->
 						<li><a href="Article-area.html" class="active">文章区</a></li>
 						<li><a href="Resource-area.html">资源区</a></li>
+						<li><a href="About.html">关于</a></li>
 					
 					</ul>
 				</nav>
@@ -34,7 +35,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">资源区</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							
 						<!--	<p>.</p>
 							<p>.</p>       -->
 						</div>
