--- a/Resource-area.html
+++ b/Resource-area.html
@@ -35,6 +35,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">资源区</h1>
+							   <li><a href="hv1.html" class="button">视频1</a></li>
 							
 						<!--	<p>.</p>
 							<p>.</p>       -->
