--- a/index.html
+++ b/index.html
@@ -103,6 +103,18 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
+									<h2>视频区</h2>
+									<p>测试视频播放功能.</p>
+									<ul class="actions">
+										<li><a href="message.html" class="button">测试</a></li>
+									</ul>
+								</div>
+							</div>
+			                    </section>
+						<section>
+							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
 									<h2>留言区</h2>
 									<p>测试留言功能（虽然有点丑，但是能用）.</p>
 									<ul class="actions">
