--- a/Video-area.html
+++ b/Video-area.html
@@ -21,7 +21,7 @@
 					<ul>
 						<li><a href="index.html">主页</a></li>                            <!-- 此处添加顶部栏 -->
 						<li><a href="Article-area.html" class="active">文章区</a></li>
-            <li><a href="Article-area.html" class="active">视频区</a></li>
+                                                <li><a href="Video-area.html" class="active">视频区</a></li>
 						<li><a href="Resource-area.html">资源区</a></li>
 						<li><a href="About.html">关于</a></li>
 					
