--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 									<h2>视频区</h2>
 									<p>测试视频播放功能.</p>
 									<ul class="actions">
-										<li><a href="message.html" class="button">测试</a></li>
+										<li><a href="Video-area.html" class="button">前往</a></li>
 									</ul>
 								</div>
 							</div>
@@ -118,7 +118,7 @@
 									<h2>留言区</h2>
 									<p>测试留言功能（虽然有点丑，但是能用）.</p>
 									<ul class="actions">
-										<li><a href="message.html" class="button">测试</a></li>
+										<li><a href="message.html" class="button">前往</a></li>
 									</ul>
 								</div>
 							</div>
