--- a/hv1.html
+++ b/hv1.html
@@ -21,6 +21,7 @@
 					<ul>
 						<li><a href="index.html">主页</a></li>         
 						<li><a href="Article-areac.html" class="文章区">Generic</a></li>
+						<li><a href="Video-area.html" class="active">视频区</a></li>
 						<li><a href="Recourse-area.html">资源区</a></li>
 						 <li><a href="About.html">关于</a></li>
 					
