--- a/About.html
+++ b/About.html
@@ -20,7 +20,8 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">主页</a></li>         
-						<li><a href="Article-area">日记</a></li>
+						<li><a href="Article-area">文章区</a></li>
+						<li><a href="Video-area.html" class="active">视频区</a></li>
 						<li><a href="Rsource-area.html">资源区</a></li>
             	                                <li><a href="About.html">关于</a></li>
 					</ul>
