--- a/hv1.html
+++ b/hv1.html
@@ -20,7 +20,7 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">主页</a></li>         
-						<li><a href="Article-areac.html" class="文章区">Generic</a></li>
+						<li><a href="Article-area.html">文章区</a></li>
 						<li><a href="Video-area.html" class="active">视频区</a></li>
 						<li><a href="Recourse-area.html">资源区</a></li>
 						 <li><a href="About.html">关于</a></li>
