--- a/Article-area.html
+++ b/Article-area.html
@@ -22,7 +22,7 @@
 						<li><a href="index.html">主页</a></li>         
 						<li><a href="Article-area.html">文章区</a></li>
 						<li><a href="Video-area.html" class="active">视频区</a></li>
-						<li><a href="Recourse-area.html">资源区</a></li>
+						<li><a href="Resource-area.html">资源区</a></li>
 						 <li><a href="About.html">关于</a></li>
 					
 					</ul>
