--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>粉色棒棒糖倒立404错误页面模板 - 404模板网404.life</title>
+  <title>404-Liuhouzhi‘s blog</title>
   <link rel="stylesheet" href="css/style-freedom.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,700&display=swap" rel="stylesheet">                                 
@@ -34,12 +34,12 @@
                 <p class="zoom-area para">对不起，页面丢失了，请返回首页或者联系我们哦 </p>
  
                 <div class="link-container">
-                    <a href="https://404.life/" class="more-link">返回首页</a>
+                    <a href="liuhouzhi0809.github/" class="more-link">返回首页</a>
                     
                 </div>
             </div>
             <div class="columns-copy ">
-                <p class="copy-footer">Copyright &copy; 404.life All rights reserved.</p>
+                <p class="copy-footer">Copyright &copy; Liuhouzhi‘s blog  All rights reserved.</p>
             </div>
         </div>
     </div>
