--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
                 <p class="zoom-area para">对不起，页面丢失了，请返回首页或者联系我们哦 </p>
  
                 <div class="link-container">
-                    <a href="liuhouzhi0809.github/" class="more-link">返回首页</a>
+                    <a href="liuhouzhi0809.github.io/" class="more-link">返回首页</a>
                     
                 </div>
             </div>
