--- a/About.html
+++ b/About.html
@@ -6,7 +6,7 @@
 		<!--icon -->
 		<link rel="shortcut icon" href="favicon.ico.png" >
 		
-		<title>日记-liuhouzhi‘s blog  </title> <!-- 浏览器标题 -->
+		<title>关于-liuhouzhi‘s blog  </title> <!-- 浏览器标题 -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -36,9 +36,21 @@
 						<div class="inner">
 							<h1 class="major">关于</h1>
 							                               <!-- 文字-->
-							<p>2020年4月21日 </p>                   
-							<p>今天天气甚好，无事。</p> 
-							<p>2020年4月22日</p> 
+							<p>Liuhouzhi0809‘s Blog<p>
+                                                       <p>I really appreciate the template provided by this website（html5up.net）<p>
+                                                      <p> html5up.net | @ajlkn<p>
+                                                       <p> Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)<p>
+
+                                                       <p> 非常感谢html5up.net提供的模版<p>
+                                                       <p> 根据CCA 3.0许可证，可免费用于个人和商业用途<p>
+                                                       <p> 这是一个静态网站<p>
+
+                                                       <p> 更新记录<p>
+                                                        <p>2020.4.21        修改了主页，增加了一个页面<p>
+                                                       <p> 2020.4.22        尝试增加了一个留言板功能,formspree提供的服务（https://formspree.io/）</p>  
+
+
+							
 							
 						</div>
 					</section>
