--- a/index.html
+++ b/index.html
@@ -155,17 +155,17 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
+											<span>12345 mowhere Road #654<br />
 											Nashville, TN 00000-0000<br />
 											USA</span>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="#">?????@untitled.tld</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<span>(520) 666-777</span>
 										</li>
 										<li>
 											<h3>Social</h3>
