--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Liuhouzhi's Blog</h1> <!--主页的第一句话--> 
-							<p>这是用来测试的网站...（其实我也不知道这是用来干嘛的）</p>
+							<p>这是用来测试的网站...</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">了解更多</a></li>
 							</ul>
@@ -92,7 +92,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>资源区</h2>
-									<p>有很多资源可以下载</p>
+									<p>有很多资源可以下载（当然现在还没有）</p>
 									<ul class="actions">
 										<li><a href="Resource-area.html" class="button">前往</a></li>
 									</ul>
