--- a/Article-area.html
+++ b/Article-area.html
@@ -37,7 +37,8 @@
 						<div class="inner">
 							<h1 class="major">文章区</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-	                                                <li><a href="diary.html" class="button">日记</a></li>					
+	                                                <li><a href="diary.html" class="button">日记</a></li>
+							  <li><a href="alt2.htm" class="button">快速搭建个人博客</a></li>
 						<!--   	<p>.</p>
 							<p>.</p>       -->
 						</div>
