--- a/About.html
+++ b/About.html
@@ -41,7 +41,7 @@
                                                       <p> html5up.net | @ajlkn<p>
                                                        <p> Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)<p>
 
-                                                       <p> 非常感谢html5up.net提供的模版<p>
+                                                       <p> 感谢 html5up.net 提供的模版！<p>
                                                        <p> 根据CCA 3.0许可证，可免费用于个人和商业用途<p>
                                                        <p> 这是一个静态网站<p>
 
