--- a/About.html
+++ b/About.html
@@ -45,9 +45,10 @@
                                                        <p> 根据CCA 3.0许可证，可免费用于个人和商业用途<p>
                                                        <p> 这是一个静态网站<p>
 
-                                                       <p> 更新记录<p>
+                                                        <p> 更新记录<p>
                                                         <p>2020.4.21        修改了主页，增加了一个页面<p>
-                                                       <p> 2020.4.22        尝试增加了一个留言板功能,formspree提供的服务（https://formspree.io/）</p>  
+                                                       <p> 2020.4.22        尝试增加了一个留言板功能,formspree提供的服务</p>
+						       <li><a href="https://formspree.io/" class="button">formspree</a></li>
 
 
 							
