--- a/About.html
+++ b/About.html
@@ -37,8 +37,8 @@
 							<h1 class="major">关于</h1>
 							                               <!-- 文字-->
 							<p>Liuhouzhi0809‘s Blog<p>
-                                                       <p>I really appreciate the template provided by this website <li><a href="https://formspree.io/" class="button">formspree</a></li> <p>
-                                                      <p> html5up.net | @ajlkn<p>
+                                                       <p>I really appreciate the template provided by this website <li><a href="html5up.net/" class="button">html5up</a></li> <p>
+                                                      <p> ----LiHouzhi
                                                        <p> Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)<p>
 
                                                        <p> 感谢 html5up.net 提供的模版！<p>
