--- a/About.html
+++ b/About.html
@@ -37,7 +37,7 @@
 							<h1 class="major">关于</h1>
 							                               <!-- 文字-->
 							<p>Liuhouzhi0809‘s Blog<p>
-                                                       <p>I really appreciate the template provided by this website <li><a href="html5up.net/" class="button">html5up</a></li> <p>
+                                                       <p>I really appreciate the template provided by this website <li><a href="https://html5up.net/" class="button">html5up</a></li> <p>
                                                       <p> ----LiHouzhi
                                                        <p> Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)<p>
 
