--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>12345 mowhere Road #654<br />
+											<span>12345 nowhere Road #654<br />
 											Nashville, TN 00000-0000<br />
 											USA</span>
 										</li>
