--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<ul>
 							<li><a href="#intro">欢迎</a></li>
 							<li><a href="#one">内容</a></li>
-							<li><a href="#two">取得联系</a></li>
+							<!--<li><a href="#two">取得联系</a></li>  -->
 							<!-- <li><a href="#four">测试</a></li>  -->
 							<!-- <li><a href="#four">测试</a></li>  -->
 							<!-- <li><a href="#four">测试</a></li>  -->
@@ -123,7 +123,8 @@
 								</div>
 							</div>
 			                    </section>
-		<!-- two -->		
+		<!-- two -->
+		<!-- 				
 					</section>
 				<section id="two" class="wrapper style1 fade-up">
 						<div class="inner">
@@ -183,7 +184,8 @@
 						</div>
 					</section>
 
-			</div>
+			</div>   
+                                                 -->
 
 
 		<!-- Footer -->
