--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									<h2>文章区</h2>
 									<p>各种内容</p>
 									<ul class="actions">
-										<li><a href="Article-area.html" class="button">前往</a></li>
+										<li><a href="Article-area" class="button">前往</a></li>
 										
 									</ul>
 								</div>
@@ -94,7 +94,7 @@
 									<h2>资源区</h2>
 									<p>有很多资源可以下载（当然现在还没有）</p>
 									<ul class="actions">
-										<li><a href="Resource-area.html" class="button">前往</a></li>
+										<li><a href="Resource-area" class="button">前往</a></li>
 									</ul>
 								</div>
 							</div>
@@ -106,7 +106,7 @@
 									<h2>视频区</h2>
 									<p>测试视频播放功能.</p>
 									<ul class="actions">
-										<li><a href="Video-area.html" class="button">前往</a></li>
+										<li><a href="Video-area" class="button">前往</a></li>
 									</ul>
 								</div>
 							</div>
@@ -118,7 +118,7 @@
 									<h2>留言区</h2>
 									<p>测试留言功能（虽然有点丑，但是能用）.</p>
 									<ul class="actions">
-										<li><a href="message.html" class="button">前往</a></li>
+										<li><a href="message" class="button">前往</a></li>
 									</ul>
 								</div>
 							</div>
