--- a/About.html
+++ b/About.html
@@ -22,7 +22,7 @@
 						<li><a href="index">主页</a></li>         
 						<li><a href="Article-area">文章区</a></li>
 						<li><a href="Video-area" class="active">视频区</a></li>
-						<li><a href="Rsource-area">资源区</a></li>
+						<li><a href="Resource-area">资源区</a></li>
             	                                <li><a href="About">关于</a></li>
 					</ul>
 				</nav>
