--- a/Article-area.html
+++ b/Article-area.html
@@ -19,11 +19,11 @@
 				<a href="index.html" class="title">Liuhouzhi's Blog</a>   <!--总标题 -->
 				<nav>
 					<ul>
-						<li><a href="index.html">主页</a></li>         
-						<li><a href="Article-area.html">文章区</a></li>
-						<li><a href="Video-area.html" class="active">视频区</a></li>
-						<li><a href="Resource-area.html">资源区</a></li>
-						 <li><a href="About.html">关于</a></li>
+						<li><a href="index">主页</a></li>         
+						<li><a href="Article-area">文章区</a></li>
+						<li><a href="Video-area" class="active">视频区</a></li>
+						<li><a href="Resource-area">资源区</a></li>
+						 <li><a href="About">关于</a></li>
 					
 					</ul>
 				</nav>
@@ -37,7 +37,7 @@
 						<div class="inner">
 							<h1 class="major">文章区</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-	                                                <li><a href="diary.html" class="button">日记</a></li>
+	                                                <li><a href="diary" class="button">日记</a></li>
 							  
 						<!--   	<p>.</p>
 							<p>.</p>       -->
