--- a/Video-area.html
+++ b/Video-area.html
@@ -19,11 +19,11 @@
 				<a href="index.html" class="title">Liuhouzhi's Blog</a>   <!--总标题 -->
 				<nav>
 					<ul>
-						<li><a href="index.html">主页</a></li>                            <!-- 此处添加顶部栏 -->
-						<li><a href="Article-area.html" class="active">文章区</a></li>
-                                                <li><a href="Video-area.html" class="active">视频区</a></li>
-						<li><a href="Resource-area.html">资源区</a></li>
-						<li><a href="About.html">关于</a></li>
+						<li><a href="index">主页</a></li>                            <!-- 此处添加顶部栏 -->
+						<li><a href="Article-area" class="active">文章区</a></li>
+                                                <li><a href="Video-area" class="active">视频区</a></li>
+						<li><a href="Resource-area">资源区</a></li>
+						<li><a href="About">关于</a></li>
 					
 					</ul>
 				</nav>
@@ -36,7 +36,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">视频区</h1>
-							   <li><a href="hv1.html" class="button">世卫组织：现有证据表明新冠病毒源自动物 蝙蝠最有可能是自然界贮主</a></li>
+							   <li><a href="hv1" class="button">世卫组织：现有证据表明新冠病毒源自动物 蝙蝠最有可能是自然界贮主</a></li>
 							
 						<!--	<p>.</p>
 							<p>.</p>       -->
