--- a/hv1.html
+++ b/hv1.html
@@ -19,11 +19,11 @@
 				<a href="index.html" class="title">Liuhouzhi's Blog</a>   <!--总标题 -->
 				<nav>
 					<ul>
-						<li><a href="index.html">主页</a></li>         
-						<li><a href="Article-area.html">文章区</a></li>
-						<li><a href="Video-area.html" class="active">视频区</a></li>
-						<li><a href="Recourse-area.html">资源区</a></li>
-						 <li><a href="About.html">关于</a></li>
+						<li><a href="index">主页</a></li>         
+						<li><a href="Article-area">文章区</a></li>
+						<li><a href="Video-area" class="active">视频区</a></li>
+						<li><a href="Recourse-area">资源区</a></li>
+						 <li><a href="About">关于</a></li>
 					
 					</ul>
 				</nav>
