--- a/Article-area.html
+++ b/Article-area.html
@@ -36,7 +36,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">文章区</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+						  <!--  <span class="image fit"><img src="images/pic04.jpg" alt="" /></span>       -显示一张图片 --->
 	                                                <li><a href="diary" class="button">日记</a></li>
 							  
 						<!--   	<p>.</p>
