--- a/a1.html
+++ b/a1.html
@@ -36,7 +36,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">快装不下油了！全球原油储存空间将三个月内用尽 </h1>
-							<img src="" width="200" height="200">
+							<img src="images/a2-1.jpg" width="200" height="200">
 							  <span class="image fit"><img src="images/a2-1.jpg" alt="" /></span> 
 						
 							
