--- a/a2.html
+++ b/a2.html
@@ -46,7 +46,7 @@
 							<img src="images/a1-1.png" width="640" height="164"> 
 							<p>特朗普推特截图<p>
 							<p>他接着写道，“我从清晨工作到深夜，为了照顾贸易协议、军队重建等，已经好几个月没有离开白宫了（除了为了海军医院船“安慰号”送行外），然后我读了一个假故事：失败的《纽约时报》上有关我的工作时间表和饮食习惯的报道，由一位不了解我的三流记者撰写的。我经常会在深夜里到椭圆形办公室、看书、在卧室里愤怒地吃着汉堡喝着健怡可乐。和我在一起的人总是很震惊。这有什么可指摘的！<p>
-							<img src="images/a1-2.png" width="550" height="311">
+							<img src="images/a1-2.jpg" width="550" height="311">
 							<p>特朗普推特截图<p>
 							<p>特朗普发推：简报会真不值得！<p>
 							<p>白宫没有举行疫情简报会这天，特朗普发推：不值得花费时间与精力！ <p>
