--- a/About.html
+++ b/About.html
@@ -5,8 +5,9 @@
 	<head>    
 		<!--icon -->
 		<link rel="shortcut icon" href="favicon.ico.png" >
+		
 		<!-- 外链播放器 -->
-		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=624759&auto=1&height=66"></iframe>
+		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=29758315&auto=1&height=66"></iframe>
 		<!--  -->
 		
 		<title>关于-liuhouzhi‘s blog  </title> <!-- 浏览器标题 -->
